<resources>
    <string name="app_name">BarrierFree</string>
    <string name="android_icon">android_icon</string>
    <string name="app_title">BarrierFree Restaurant</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="wheelchair_icon">wheelchair icon</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_create_account">Welcome to create account</string>
    <string name="map">map</string>
    <string name="my_page">my page</string>
    <string name="category">category</string>
    <string name="favorite">favorite</string>
    <string name="image_restaurant">image_restaurant</string>
    <string name="info_detail">info_detail</string>
    <string name="info_accessible">info_accessible</string>
    <string name="restaurant_call">restaurant_call</string>
    <string name="restaurant_title">Restaurant title</string>
    <string name="restaurant_address">restaurant_address</string>
    <string name="chungnam">충남</string>
    <string name="gyeongbuk">경북</string>
    <string name="gyeongnam">경남</string>
    <string name="jeonbuk">전북</string>
    <string name="jeonnam">전남</string>
    <string name="jeju">제주</string>
    <string name="chungbuk">충북</string>
    <string name="gangwon">강원</string>
    <string name="ulsan">울산</string>
    <string name="sejong">세종</string>
    <string name="deajeon">대전</string>
    <string name="busan">부산</string>
    <string name="gwangju">광주</string>
    <string name="deagu">대구</string>
    <string name="incheon">인천</string>
    <string name="gyenggi">경기</string>
    <string name="seoul">서울</string>
    <string name="korea">전국</string>
    <string name="descripition_please_search_keyword">키워드를 검색어를 입력해주세요.</string>
    <string name="input_is_empty">입력값이 비었습니다.</string>
    <string name="login_success">로그인 성공!</string>
    <string name="Check_Email_Password">이메일과 비밀번호를 확인해주세요</string>
    <string name="ic_appbar_menu">ic_appbar_menu</string>
    <string name="app_name_kor">베리어프리</string>
    <string name="description_image_barrier_free">description_image_barrier_free</string>
    <string name="barrier_free_title">barrier_free_title</string>
    <string name="barrier_free_address">barrier_free_address</string>
    <string name="description_today_barrierfree_recommendation">오늘의 베리어프리 명소 추천</string>
    <string name="see_more">더보기</string>
    <string name="today_tourist_attraction_recommendation">오늘의 베리어프리 관광지 추천</string>
    <string name="image_recommendation">image_recommendation</string>
    <string name="today_cultural_facility_recommendation">오늘의 베리어프리 문화시설 추천</string>
    <string name="temp_address">경기도 고양시 백범로 25길 63</string>
    <string name="temp_title">안녕하세요</string>
    <string name="today_accommodation_recommendation">오늘의 베리어프리 숙박시설 추천</string>
    <string name="today_food_recommendation">오늘의 베리어프리 음식점 추천</string>
    <string name="home">home</string>
    <string name="image_detail">image_detail</string>
    <string name="description_detail_layout">상세화면!</string>
    <string name="detail_fragment_layout">상세화면</string>
    <string name="basic_info">기본 정보</string>
    <string name="basic_info_title">타이틀</string>
    <string name="description_basic_info_address">주소 :</string>
    <string name="temporary_address">강원도 원주시</string>
</resources>